--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-firestore": "^0.3.30",
+    "vue-router": "^3.1.6",
+    "vue2-editor": "^2.10.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -29,6 +31,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "sweetalert2": "^9.10.9",
     "vue-template-compiler": "^2.6.11"
   }
 }
