--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "vue-carousel": "^0.18.0",
     "vue-firestore": "^0.3.30",
     "vue-router": "^3.1.6",
-    "vue2-editor": "^2.10.2"
+    "vue-stripe-elements-plus": "^0.3.2",
+    "vue2-editor": "^2.10.2",
+    "vue2-filters": "^0.10.0",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-plugin-router": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
