--- a/functions/package.json
+++ b/functions/package.json
@@ -12,8 +12,10 @@
     "node": "8"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase-admin": "^8.9.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "stripe": "^8.39.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
