--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "firebase": "^7.14.0",
     "jquery": "^3.5.0",
     "popper.js": "^1.16.1",
+    "stripe": "^8.39.2",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-firestore": "^0.3.30",
