--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "vue-stripe-elements-plus": "^0.3.2",
     "vue2-editor": "^2.10.2",
     "vue2-filters": "^0.10.0",
+    "vuetify": "^2.2.32",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.11.2",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.3.1",
     "@vue/cli-plugin-router": "^4.3.1",
@@ -35,7 +37,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "sweetalert2": "^9.10.10",
